--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
+<h1>Daniel Kim</h1>
 <p>I'm hosted with GitHub Pages. Testing</p>
+<button>button!</button>
+<a href = "https://www.youtube.com/watch?v=G3e-cpL7ofc&t=446s" target="_blank"> link</a>
 </body>
 </html>
