--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
+
+<title>Yewan (Daniel) Kim</title>
+
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<h1>Daniel Kim</h1>
-<p>I'm hosted with GitHub Pages. Testing</p>
+<h1>Hi! I am Yewan Kim. <br> You can call me Daniel.</h1>
+<p></p>
 <button>button!</button>
-<a href = "https://www.youtube.com/watch?v=G3e-cpL7ofc&t=446s" target="_blank"> link</a>
+<a href = "https://github.com/danielkim1213" target="_blank"> GitHub</a>
+<canvas id = "Matrix"></canvas>
+<script src = "./index.js"></script>
 </body>
 </html>
