text writer implementation

--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
 </head>
 
 <body>
-
-    <h1>Hi! I am Yewan Kim. <br> You can call me Daniel.</h1>
-    <p></p>
-    <button>button!</button>
-    <a href = "https://github.com/danielkim1213" target="_blank"> GitHub</a>
+    <h1>Welcome! I am Yewan (Daniel) Kim.</h1>
+    <a>Check my profile at: </a><a href = "https://github.com/danielkim1213" target="_blank"> GitHub</a>
+    <a> Or </a><a href = "https://www.linkedin.com/in/kim-yewan-9046a7218/" target="_blank">LinkedIn</a>
+    <main>
+        <h2>About Me</h2>
+        <div id="text-container"></div>
+        <a class="btn" id="type-button">
+            View!
+            <span class="shadow"><span></span></span>
+        </a>
+        <script src = "./text.js"></script>
+    </main>
 
 
 </body>
