--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
 <body>
     <h1>Welcome! I am Yewan (Daniel) Kim.</h1>
-    <a>Check my profile at: </a><a href = "https://github.com/danielkim1213" target="_blank"> GitHub</a>
-    <a> Or </a><a href = "https://www.linkedin.com/in/kim-yewan-9046a7218/" target="_blank">LinkedIn</a>
     <main>
         <h2>About Me</h2>
         <div id="text-container"></div>
@@ -24,6 +22,9 @@
             <span class="shadow"><span></span></span>
         </a>
         <script src = "./text.js"></script>
+        <p></p><p></p>
+        <a>Check my profile at: </a><a class="link" href = "https://github.com/danielkim1213" target="_blank"> GitHub</a>
+        <a> Or </a><a class="link" href = "https://www.linkedin.com/in/kim-yewan-9046a7218/" target="_blank">LinkedIn</a>
     </main>
 
 
