resize fix and start of contact section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>Welcome! I am Yewan (Daniel) Kim.</h1>
+    <h1>Welcome to my website!</h1>
     <main>
         <h2>About Me</h2>
         <div id="text-container"></div>
@@ -23,6 +23,18 @@
         </a>
         <script src = "./text.js"></script>
         <p></p><p></p>
+
+
+        <h2>Contact</h2>
+        <div id="contact-container"></div>
+        <a class="btn" id="contact-button">
+            View!
+            <span class="shadow"><span></span></span>
+        </a>
+        <script src = "./contact.js"></script>
+        <p></p><p></p>
+
+
         <a>Check my profile at: </a><a class="link" href = "https://github.com/danielkim1213" target="_blank"> GitHub</a>
         <a> Or </a><a class="link" href = "https://www.linkedin.com/in/kim-yewan-9046a7218/" target="_blank">LinkedIn</a>
     </main>
