--- a/index.html
+++ b/index.html
@@ -15,26 +15,27 @@
 <body>
     <h1>Welcome to my website!</h1>
     <main>
-        <h2>About Me</h2>
-        <div id="text-container"></div>
-        <a class="btn" id="type-button">
-            View!
-            <span class="shadow"><span></span></span>
-        </a>
-        <script src = "./text.js"></script>
-
-        <h2></h2>
-
-        <h2>Contact</h2>
-        <div id="contact-container"></div>
-        <a class="btn" id="contact-button">
-            View!
-            <span class="shadow"><span></span></span>
-        </a>
-        <script src = "./contact.js"></script>
-        <p></p><p></p>
-
-        
+        <div class="about-me">
+            <h2>About Me</h2>
+            <div id="text-container"></div>
+            <a class="btn" id="type-button">
+                View!
+                <span class="shadow"><span></span></span>
+            </a>
+            <script src="./text.js"></script>
+        </div>
+    
+        <div class="contact-info">
+            <h2>Contact</h2>
+            <div id="contact-container"></div>
+            <a class="btn" id="contact-button">
+                View!
+                <span class="shadow"><span></span></span>
+            </a>
+            <script src="./contact.js"></script>
+            <p></p>
+            <p></p>
+        </div>
     </main>
 
 
