--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <h1>Welcome to my website!</h1>
     <main>
-        <fieldset>
+        <fieldset >
             <legend> About Me </legend>
             <div class="about-me">
                 <h2>Info</h2>
@@ -37,10 +37,11 @@
                 </a>
                 <script src="./contact.js"></script>
                 <p></p>
-                <p></p>
             </div>
         </fieldset>
-        
+        <fieldset >
+            <legend> My projects </legend>
+        </fieldset>
     </main>
 
 
