--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
                 <p></p>
             </div>
         </fieldset>
+        <p>
+            <br>
+        </p>
         <fieldset >
             <legend> My projects </legend>
-        </fieldset>
+            <br>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/SZShsA13kK0?rel=0&enablejsapi=1" title="Hackathon - Digital Health Data" frameborder="0" ></iframe>
     </main>
 
 
