--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
         <p>
             <br>
         </p>
-        <fieldset >
+        <fieldset>
             <legend> My projects </legend>
             <br>
             <iframe width="640" height="360" src="https://www.youtube.com/embed/SZShsA13kK0?rel=0&enablejsapi=1" title="Hackathon - Digital Health Data" frameborder="0" ></iframe>
+            <br>
+        </fieldset>
+
     </main>
 
 
